# PrisDilm

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
boyi/: api.py  game_core.py
boyi/gamers/: __init__.py  examples.py  randomer.py  tit_for_tat.py
docs/: DEVDOC.md  GAMERS.md
prisdilm/: api.py  game_core.py
prisdilm/gamers/: __init__.py  examples.py  predictive.py  randomer.py  tit_for_tat.py  two_for_one.py
